syntax="proto3";
// This defines the import path that we can tell other applications to call it from
// It will always start with the project root initialized by go mod init
// In this case, CloakNDaggerC2
option go_package = "dagger/proto/daggerProto";

package dagger;

message DbContents {
    // General search DB service
    repeated string res = 1;
}

message UpdateObject {
    string UUID = 1;
    string Whoami = 2;
    string Signature = 3;
    int32 Retrieved = 4;
    string Command = 5;
    string LastCheckIn = 6;
    string Result = 7;
    int32 GotIt = 8;
}

message LogStruct {
    string UUID = 1;
    string TimeS = 2;
    string CmdSent = 3;
    string Err1 = 4;
    string TimeR = 5;
    string Recv = 6;
    string Err2 = 7;
}

message BuildRoutine {
    string Platform = 1;
	string Architecture = 2;
	string Name = 3;    
	string Listener_address = 4;
    int32 Sleep = 5;
    string Jitter = 6;
    string GetURL = 7;
    string PostURL = 8;
}

message ResponseCode {
    int32 Code = 1;
}

message getUUID {
    string UUID = 1;
}

message getKey {
    string Key = 1;
}

message DelKey{
    string Key = 1;
}

service Remove{
    rpc RemKey(DelKey) returns (ResponseCode) {}
}

service GetAll{
    rpc GetAll(getKey) returns (DbContents) {}
}

service hgetRecord{
    rpc Hget(getUUID) returns (UpdateObject) {}
}

service getRecord{
    rpc get(getUUID) returns (UpdateObject) {}
}

service Builder {
    rpc StartBuilding(BuildRoutine) returns (ResponseCode) {}
}

service UpdateRecord {
    rpc SendUpdate(UpdateObject) returns (ResponseCode) {}
}

service LogCmd {
    rpc LogCmd(LogStruct) returns (ResponseCode) {}
}